feat: [CI-8556]: cleanup flag (#49588)
* feat: [CI-8556]: cleanup flag

* feat: [CI-8556]: cleanup flag