@@ -279,9 +279,8 @@ public class StrategyUtils {
 
   public void replaceExpressions(
       Object jsonString, Map<String, String> combinations, int currentIteration, int totalIteration, String itemValue) {
-    EngineExpressionEvaluator evaluator =
-        new StrategyExpressionEvaluator(combinations, currentIteration, totalIteration, itemValue,
-            Map.of(EngineExpressionEvaluator.ENABLED_FEATURE_FLAGS_KEY, "CI_DISABLE_RESOURCE_OPTIMIZATION"));
+    EngineExpressionEvaluator evaluator = new StrategyExpressionEvaluator(
+        combinations, currentIteration, totalIteration, itemValue, Collections.emptyMap());
     evaluator.resolve(jsonString, ExpressionMode.RETURN_ORIGINAL_EXPRESSION_IF_UNRESOLVED);
   }
 
